Adding the accounts menu

--- a/client/app/common/icons.less
+++ b/client/app/common/icons.less
@@ -4267,9 +4267,19 @@
  	.icon-point-up();
 }
 
-.icon-powercord() {
+.icon-power-off() {
 	&:before {
 		content:"\f2a8";
+	}
+	
+}
+.icon-power-off{
+ 	.icon-power-off();
+}
+
+.icon-powercord() {
+	&:before {
+		content:"\f2a9";
 	}
 	
 }
@@ -4279,7 +4289,7 @@
 
 .icon-previous() {
 	&:before {
-		content:"\f2a9";
+		content:"\f2aa";
 	}
 	
 }
@@ -4289,7 +4299,7 @@
 
 .icon-print() {
 	&:before {
-		content:"\f2aa";
+		content:"\f2ab";
 	}
 	
 }
@@ -4299,7 +4309,7 @@
 
 .icon-profile() {
 	&:before {
-		content:"\f2ab";
+		content:"\f2ac";
 	}
 	
 }
@@ -4309,7 +4319,7 @@
 
 .icon-pushpin() {
 	&:before {
-		content:"\f2ac";
+		content:"\f2ad";
 	}
 	
 }
@@ -4319,7 +4329,7 @@
 
 .icon-qrcode() {
 	&:before {
-		content:"\f2ad";
+		content:"\f2ae";
 	}
 	
 }
@@ -4329,7 +4339,7 @@
 
 .icon-question-mark() {
 	&:before {
-		content:"\f2ae";
+		content:"\f2af";
 	}
 	
 }
@@ -4339,7 +4349,7 @@
 
 .icon-question() {
 	&:before {
-		content:"\f2af";
+		content:"\f2b0";
 	}
 	
 }
@@ -4349,7 +4359,7 @@
 
 .icon-quill() {
 	&:before {
-		content:"\f2b0";
+		content:"\f2b1";
 	}
 	
 }
@@ -4359,7 +4369,7 @@
 
 .icon-quotes-left() {
 	&:before {
-		content:"\f2b1";
+		content:"\f2b2";
 	}
 	
 }
@@ -4369,7 +4379,7 @@
 
 .icon-radio-checked() {
 	&:before {
-		content:"\f2b2";
+		content:"\f2b3";
 	}
 	
 }
@@ -4379,7 +4389,7 @@
 
 .icon-radio-unchecked() {
 	&:before {
-		content:"\f2b3";
+		content:"\f2b4";
 	}
 	
 }
@@ -4389,7 +4399,7 @@
 
 .icon-rain() {
 	&:before {
-		content:"\f2b4";
+		content:"\f2b5";
 	}
 	
 }
@@ -4399,7 +4409,7 @@
 
 .icon-read-more() {
 	&:before {
-		content:"\f2b5";
+		content:"\f2b6";
 	}
 	
 }
@@ -4409,7 +4419,7 @@
 
 .icon-reddit() {
 	&:before {
-		content:"\f2b6";
+		content:"\f2b7";
 	}
 	
 }
@@ -4419,7 +4429,7 @@
 
 .icon-redo() {
 	&:before {
-		content:"\f2b7";
+		content:"\f2b8";
 	}
 	
 }
@@ -4429,7 +4439,7 @@
 
 .icon-redo2() {
 	&:before {
-		content:"\f2b8";
+		content:"\f2b9";
 	}
 	
 }
@@ -4439,7 +4449,7 @@
 
 .icon-reload-alt() {
 	&:before {
-		content:"\f2b9";
+		content:"\f2ba";
 	}
 	
 }
@@ -4449,7 +4459,7 @@
 
 .icon-reload() {
 	&:before {
-		content:"\f2ba";
+		content:"\f2bb";
 	}
 	
 }
@@ -4459,7 +4469,7 @@
 
 .icon-remove() {
 	&:before {
-		content:"\f2bb";
+		content:"\f2bc";
 	}
 	
 }
@@ -4469,7 +4479,7 @@
 
 .icon-remove2() {
 	&:before {
-		content:"\f2bc";
+		content:"\f2bd";
 	}
 	
 }
@@ -4479,7 +4489,7 @@
 
 .icon-reply() {
 	&:before {
-		content:"\f2bd";
+		content:"\f2be";
 	}
 	
 }
@@ -4489,7 +4499,7 @@
 
 .icon-right-quote-alt() {
 	&:before {
-		content:"\f2be";
+		content:"\f2bf";
 	}
 	
 }
@@ -4499,7 +4509,7 @@
 
 .icon-right-quote() {
 	&:before {
-		content:"\f2bf";
+		content:"\f2c0";
 	}
 	
 }
@@ -4509,7 +4519,7 @@
 
 .icon-righttoleft() {
 	&:before {
-		content:"\f2c0";
+		content:"\f2c1";
 	}
 	
 }
@@ -4519,7 +4529,7 @@
 
 .icon-road() {
 	&:before {
-		content:"\f2c1";
+		content:"\f2c2";
 	}
 	
 }
@@ -4529,7 +4539,7 @@
 
 .icon-rocket() {
 	&:before {
-		content:"\f2c2";
+		content:"\f2c3";
 	}
 	
 }
@@ -4539,7 +4549,7 @@
 
 .icon-rss-alt() {
 	&:before {
-		content:"\f2c3";
+		content:"\f2c4";
 	}
 	
 }
@@ -4549,7 +4559,7 @@
 
 .icon-rss() {
 	&:before {
-		content:"\f2c4";
+		content:"\f2c5";
 	}
 	
 }
@@ -4559,7 +4569,7 @@
 
 .icon-sad() {
 	&:before {
-		content:"\f2c5";
+		content:"\f2c6";
 	}
 	
 }
@@ -4569,7 +4579,7 @@
 
 .icon-sad2() {
 	&:before {
-		content:"\f2c6";
+		content:"\f2c7";
 	}
 	
 }
@@ -4579,7 +4589,7 @@
 
 .icon-safari() {
 	&:before {
-		content:"\f2c7";
+		content:"\f2c8";
 	}
 	
 }
@@ -4589,7 +4599,7 @@
 
 .icon-scissors() {
 	&:before {
-		content:"\f2c8";
+		content:"\f2c9";
 	}
 	
 }
@@ -4599,7 +4609,7 @@
 
 .icon-screen() {
 	&:before {
-		content:"\f2c9";
+		content:"\f2ca";
 	}
 	
 }
@@ -4609,7 +4619,7 @@
 
 .icon-search() {
 	&:before {
-		content:"\f2ca";
+		content:"\f2cb";
 	}
 	
 }
@@ -4619,7 +4629,7 @@
 
 .icon-settings() {
 	&:before {
-		content:"\f2cb";
+		content:"\f2cc";
 	}
 	
 }
@@ -4629,7 +4639,7 @@
 
 .icon-share() {
 	&:before {
-		content:"\f2cc";
+		content:"\f2cd";
 	}
 	
 }
@@ -4639,7 +4649,7 @@
 
 .icon-shield() {
 	&:before {
-		content:"\f2cd";
+		content:"\f2ce";
 	}
 	
 }
@@ -4649,7 +4659,7 @@
 
 .icon-shocked() {
 	&:before {
-		content:"\f2ce";
+		content:"\f2cf";
 	}
 	
 }
@@ -4659,7 +4669,7 @@
 
 .icon-shocked2() {
 	&:before {
-		content:"\f2cf";
+		content:"\f2d0";
 	}
 	
 }
@@ -4669,7 +4679,7 @@
 
 .icon-shuffle() {
 	&:before {
-		content:"\f2d0";
+		content:"\f2d1";
 	}
 	
 }
@@ -4679,7 +4689,7 @@
 
 .icon-sigma() {
 	&:before {
-		content:"\f2d1";
+		content:"\f2d2";
 	}
 	
 }
@@ -4689,7 +4699,7 @@
 
 .icon-signup() {
 	&:before {
-		content:"\f2d2";
+		content:"\f2d3";
 	}
 	
 }
@@ -4699,7 +4709,7 @@
 
 .icon-skype() {
 	&:before {
-		content:"\f2d3";
+		content:"\f2d4";
 	}
 	
 }
@@ -4709,7 +4719,7 @@
 
 .icon-smiley() {
 	&:before {
-		content:"\f2d4";
+		content:"\f2d5";
 	}
 	
 }
@@ -4719,7 +4729,7 @@
 
 .icon-smiley2() {
 	&:before {
-		content:"\f2d5";
+		content:"\f2d6";
 	}
 	
 }
@@ -4729,7 +4739,7 @@
 
 .icon-soundcloud() {
 	&:before {
-		content:"\f2d6";
+		content:"\f2d7";
 	}
 	
 }
@@ -4739,7 +4749,7 @@
 
 .icon-soundcloud2() {
 	&:before {
-		content:"\f2d7";
+		content:"\f2d8";
 	}
 	
 }
@@ -4749,7 +4759,7 @@
 
 .icon-spades() {
 	&:before {
-		content:"\f2d8";
+		content:"\f2d9";
 	}
 	
 }
@@ -4759,7 +4769,7 @@
 
 .icon-spam() {
 	&:before {
-		content:"\f2d9";
+		content:"\f2da";
 	}
 	
 }
@@ -4769,7 +4779,7 @@
 
 .icon-spell-check() {
 	&:before {
-		content:"\f2da";
+		content:"\f2db";
 	}
 	
 }
@@ -4779,7 +4789,7 @@
 
 .icon-spin-alt() {
 	&:before {
-		content:"\f2db";
+		content:"\f2dc";
 	}
 	
 }
@@ -4789,7 +4799,7 @@
 
 .icon-spin() {
 	&:before {
-		content:"\f2dc";
+		content:"\f2dd";
 	}
 	
 }
@@ -4799,7 +4809,7 @@
 
 .icon-spinner() {
 	&:before {
-		content:"\f2dd";
+		content:"\f2de";
 	}
 	
 }
@@ -4809,7 +4819,7 @@
 
 .icon-spinner2() {
 	&:before {
-		content:"\f2de";
+		content:"\f2df";
 	}
 	
 }
@@ -4819,7 +4829,7 @@
 
 .icon-spinner3() {
 	&:before {
-		content:"\f2df";
+		content:"\f2e0";
 	}
 	
 }
@@ -4829,7 +4839,7 @@
 
 .icon-spinner4() {
 	&:before {
-		content:"\f2e0";
+		content:"\f2e1";
 	}
 	
 }
@@ -4839,7 +4849,7 @@
 
 .icon-spinner5() {
 	&:before {
-		content:"\f2e1";
+		content:"\f2e2";
 	}
 	
 }
@@ -4849,7 +4859,7 @@
 
 .icon-spinner6() {
 	&:before {
-		content:"\f2e2";
+		content:"\f2e3";
 	}
 	
 }
@@ -4859,7 +4869,7 @@
 
 .icon-stack() {
 	&:before {
-		content:"\f2e3";
+		content:"\f2e4";
 	}
 	
 }
@@ -4869,7 +4879,7 @@
 
 .icon-stackoverflow() {
 	&:before {
-		content:"\f2e4";
+		content:"\f2e5";
 	}
 	
 }
@@ -4879,7 +4889,7 @@
 
 .icon-star() {
 	&:before {
-		content:"\f2e5";
+		content:"\f2e6";
 	}
 	
 }
@@ -4889,7 +4899,7 @@
 
 .icon-star2() {
 	&:before {
-		content:"\f2e6";
+		content:"\f2e7";
 	}
 	
 }
@@ -4899,7 +4909,7 @@
 
 .icon-star3() {
 	&:before {
-		content:"\f2e7";
+		content:"\f2e8";
 	}
 	
 }
@@ -4909,7 +4919,7 @@
 
 .icon-stats() {
 	&:before {
-		content:"\f2e8";
+		content:"\f2e9";
 	}
 	
 }
@@ -4919,7 +4929,7 @@
 
 .icon-steam() {
 	&:before {
-		content:"\f2e9";
+		content:"\f2ea";
 	}
 	
 }
@@ -4929,7 +4939,7 @@
 
 .icon-steam2() {
 	&:before {
-		content:"\f2ea";
+		content:"\f2eb";
 	}
 	
 }
@@ -4939,7 +4949,7 @@
 
 .icon-steering-wheel() {
 	&:before {
-		content:"\f2eb";
+		content:"\f2ec";
 	}
 	
 }
@@ -4949,7 +4959,7 @@
 
 .icon-stop() {
 	&:before {
-		content:"\f2ec";
+		content:"\f2ed";
 	}
 	
 }
@@ -4959,7 +4969,7 @@
 
 .icon-stop2() {
 	&:before {
-		content:"\f2ed";
+		content:"\f2ee";
 	}
 	
 }
@@ -4969,7 +4979,7 @@
 
 .icon-stopwatch() {
 	&:before {
-		content:"\f2ee";
+		content:"\f2ef";
 	}
 	
 }
@@ -4979,7 +4989,7 @@
 
 .icon-storage() {
 	&:before {
-		content:"\f2ef";
+		content:"\f2f0";
 	}
 	
 }
@@ -4989,7 +4999,7 @@
 
 .icon-strikethrough() {
 	&:before {
-		content:"\f2f0";
+		content:"\f2f1";
 	}
 	
 }
@@ -4999,7 +5009,7 @@
 
 .icon-stumbleupon() {
 	&:before {
-		content:"\f2f1";
+		content:"\f2f2";
 	}
 	
 }
@@ -5009,7 +5019,7 @@
 
 .icon-stumbleupon2() {
 	&:before {
-		content:"\f2f2";
+		content:"\f2f3";
 	}
 	
 }
@@ -5019,7 +5029,7 @@
 
 .icon-sun-fill() {
 	&:before {
-		content:"\f2f3";
+		content:"\f2f4";
 	}
 	
 }
@@ -5029,7 +5039,7 @@
 
 .icon-sun-stroke() {
 	&:before {
-		content:"\f2f4";
+		content:"\f2f5";
 	}
 	
 }
@@ -5039,7 +5049,7 @@
 
 .icon-support() {
 	&:before {
-		content:"\f2f5";
+		content:"\f2f6";
 	}
 	
 }
@@ -5049,7 +5059,7 @@
 
 .icon-switch() {
 	&:before {
-		content:"\f2f6";
+		content:"\f2f7";
 	}
 	
 }
@@ -5059,7 +5069,7 @@
 
 .icon-tab() {
 	&:before {
-		content:"\f2f7";
+		content:"\f2f8";
 	}
 	
 }
@@ -5069,7 +5079,7 @@
 
 .icon-table() {
 	&:before {
-		content:"\f2f8";
+		content:"\f2f9";
 	}
 	
 }
@@ -5079,7 +5089,7 @@
 
 .icon-table2() {
 	&:before {
-		content:"\f2f9";
+		content:"\f2fa";
 	}
 	
 }
@@ -5089,7 +5099,7 @@
 
 .icon-tablet() {
 	&:before {
-		content:"\f2fa";
+		content:"\f2fb";
 	}
 	
 }
@@ -5099,7 +5109,7 @@
 
 .icon-tag-fill() {
 	&:before {
-		content:"\f2fb";
+		content:"\f2fc";
 	}
 	
 }
@@ -5109,7 +5119,7 @@
 
 .icon-tag-stroke() {
 	&:before {
-		content:"\f2fc";
+		content:"\f2fd";
 	}
 	
 }
@@ -5119,7 +5129,7 @@
 
 .icon-tag() {
 	&:before {
-		content:"\f2fd";
+		content:"\f2fe";
 	}
 	
 }
@@ -5129,7 +5139,7 @@
 
 .icon-tags() {
 	&:before {
-		content:"\f2fe";
+		content:"\f2ff";
 	}
 	
 }
@@ -5139,7 +5149,7 @@
 
 .icon-target() {
 	&:before {
-		content:"\f2ff";
+		content:"\f300";
 	}
 	
 }
@@ -5149,7 +5159,7 @@
 
 .icon-text-height() {
 	&:before {
-		content:"\f300";
+		content:"\f301";
 	}
 	
 }
@@ -5159,7 +5169,7 @@
 
 .icon-text-width() {
 	&:before {
-		content:"\f301";
+		content:"\f302";
 	}
 	
 }
@@ -5169,7 +5179,7 @@
 
 .icon-thumbs-up() {
 	&:before {
-		content:"\f302";
+		content:"\f303";
 	}
 	
 }
@@ -5179,7 +5189,7 @@
 
 .icon-thumbs-up2() {
 	&:before {
-		content:"\f303";
+		content:"\f304";
 	}
 	
 }
@@ -5189,7 +5199,7 @@
 
 .icon-ticket() {
 	&:before {
-		content:"\f304";
+		content:"\f305";
 	}
 	
 }
@@ -5199,7 +5209,7 @@
 
 .icon-tongue() {
 	&:before {
-		content:"\f305";
+		content:"\f306";
 	}
 	
 }
@@ -5209,7 +5219,7 @@
 
 .icon-tongue2() {
 	&:before {
-		content:"\f306";
+		content:"\f307";
 	}
 	
 }
@@ -5219,7 +5229,7 @@
 
 .icon-transfer() {
 	&:before {
-		content:"\f307";
+		content:"\f308";
 	}
 	
 }
@@ -5229,7 +5239,7 @@
 
 .icon-trash-fill() {
 	&:before {
-		content:"\f308";
+		content:"\f309";
 	}
 	
 }
@@ -5239,7 +5249,7 @@
 
 .icon-trash-stroke() {
 	&:before {
-		content:"\f309";
+		content:"\f30a";
 	}
 	
 }
@@ -5249,7 +5259,7 @@
 
 .icon-tree() {
 	&:before {
-		content:"\f30a";
+		content:"\f30b";
 	}
 	
 }
@@ -5259,7 +5269,7 @@
 
 .icon-trophy() {
 	&:before {
-		content:"\f30b";
+		content:"\f30c";
 	}
 	
 }
@@ -5269,7 +5279,7 @@
 
 .icon-truck() {
 	&:before {
-		content:"\f30c";
+		content:"\f30d";
 	}
 	
 }
@@ -5279,7 +5289,7 @@
 
 .icon-tumblr() {
 	&:before {
-		content:"\f30d";
+		content:"\f30e";
 	}
 	
 }
@@ -5289,7 +5299,7 @@
 
 .icon-tumblr2() {
 	&:before {
-		content:"\f30e";
+		content:"\f30f";
 	}
 	
 }
@@ -5299,7 +5309,7 @@
 
 .icon-tux() {
 	&:before {
-		content:"\f30f";
+		content:"\f310";
 	}
 	
 }
@@ -5309,7 +5319,7 @@
 
 .icon-tv() {
 	&:before {
-		content:"\f310";
+		content:"\f311";
 	}
 	
 }
@@ -5319,7 +5329,7 @@
 
 .icon-twitter() {
 	&:before {
-		content:"\f311";
+		content:"\f312";
 	}
 	
 }
@@ -5329,7 +5339,7 @@
 
 .icon-twitter2() {
 	&:before {
-		content:"\f312";
+		content:"\f313";
 	}
 	
 }
@@ -5339,7 +5349,7 @@
 
 .icon-twitter3() {
 	&:before {
-		content:"\f313";
+		content:"\f314";
 	}
 	
 }
@@ -5349,7 +5359,7 @@
 
 .icon-umbrella() {
 	&:before {
-		content:"\f314";
+		content:"\f315";
 	}
 	
 }
@@ -5359,7 +5369,7 @@
 
 .icon-underline() {
 	&:before {
-		content:"\f315";
+		content:"\f316";
 	}
 	
 }
@@ -5369,7 +5379,7 @@
 
 .icon-undo() {
 	&:before {
-		content:"\f316";
+		content:"\f317";
 	}
 	
 }
@@ -5379,7 +5389,7 @@
 
 .icon-undo2() {
 	&:before {
-		content:"\f317";
+		content:"\f318";
 	}
 	
 }
@@ -5389,7 +5399,7 @@
 
 .icon-unlock-fill() {
 	&:before {
-		content:"\f318";
+		content:"\f319";
 	}
 	
 }
@@ -5399,7 +5409,7 @@
 
 .icon-unlock-stroke() {
 	&:before {
-		content:"\f319";
+		content:"\f31a";
 	}
 	
 }
@@ -5409,7 +5419,7 @@
 
 .icon-unlocked() {
 	&:before {
-		content:"\f31a";
+		content:"\f31b";
 	}
 	
 }
@@ -5419,7 +5429,7 @@
 
 .icon-upload() {
 	&:before {
-		content:"\f31b";
+		content:"\f31c";
 	}
 	
 }
@@ -5429,7 +5439,7 @@
 
 .icon-upload2() {
 	&:before {
-		content:"\f31c";
+		content:"\f31d";
 	}
 	
 }
@@ -5439,7 +5449,7 @@
 
 .icon-upload3() {
 	&:before {
-		content:"\f31d";
+		content:"\f31e";
 	}
 	
 }
@@ -5449,7 +5459,7 @@
 
 .icon-user() {
 	&:before {
-		content:"\f31e";
+		content:"\f31f";
 	}
 	
 }
@@ -5459,7 +5469,7 @@
 
 .icon-user2() {
 	&:before {
-		content:"\f31f";
+		content:"\f320";
 	}
 	
 }
@@ -5469,7 +5479,7 @@
 
 .icon-user3() {
 	&:before {
-		content:"\f320";
+		content:"\f321";
 	}
 	
 }
@@ -5479,7 +5489,7 @@
 
 .icon-user4() {
 	&:before {
-		content:"\f321";
+		content:"\f322";
 	}
 	
 }
@@ -5489,7 +5499,7 @@
 
 .icon-users() {
 	&:before {
-		content:"\f322";
+		content:"\f323";
 	}
 	
 }
@@ -5499,7 +5509,7 @@
 
 .icon-users2() {
 	&:before {
-		content:"\f323";
+		content:"\f324";
 	}
 	
 }
@@ -5509,7 +5519,7 @@
 
 .icon-vimeo() {
 	&:before {
-		content:"\f324";
+		content:"\f325";
 	}
 	
 }
@@ -5519,7 +5529,7 @@
 
 .icon-vimeo2() {
 	&:before {
-		content:"\f325";
+		content:"\f326";
 	}
 	
 }
@@ -5529,7 +5539,7 @@
 
 .icon-vimeo3() {
 	&:before {
-		content:"\f326";
+		content:"\f327";
 	}
 	
 }
@@ -5539,7 +5549,7 @@
 
 .icon-volume-decrease() {
 	&:before {
-		content:"\f327";
+		content:"\f328";
 	}
 	
 }
@@ -5549,7 +5559,7 @@
 
 .icon-volume-high() {
 	&:before {
-		content:"\f328";
+		content:"\f329";
 	}
 	
 }
@@ -5559,7 +5569,7 @@
 
 .icon-volume-increase() {
 	&:before {
-		content:"\f329";
+		content:"\f32a";
 	}
 	
 }
@@ -5569,7 +5579,7 @@
 
 .icon-volume-low() {
 	&:before {
-		content:"\f32a";
+		content:"\f32b";
 	}
 	
 }
@@ -5579,7 +5589,7 @@
 
 .icon-volume-medium() {
 	&:before {
-		content:"\f32b";
+		content:"\f32c";
 	}
 	
 }
@@ -5589,7 +5599,7 @@
 
 .icon-volume-mute() {
 	&:before {
-		content:"\f32c";
+		content:"\f32d";
 	}
 	
 }
@@ -5599,7 +5609,7 @@
 
 .icon-volume-mute2() {
 	&:before {
-		content:"\f32d";
+		content:"\f32e";
 	}
 	
 }
@@ -5609,7 +5619,7 @@
 
 .icon-volume() {
 	&:before {
-		content:"\f32e";
+		content:"\f32f";
 	}
 	
 }
@@ -5619,7 +5629,7 @@
 
 .icon-wand() {
 	&:before {
-		content:"\f32f";
+		content:"\f330";
 	}
 	
 }
@@ -5629,7 +5639,7 @@
 
 .icon-warning() {
 	&:before {
-		content:"\f330";
+		content:"\f331";
 	}
 	
 }
@@ -5639,7 +5649,7 @@
 
 .icon-windows() {
 	&:before {
-		content:"\f331";
+		content:"\f332";
 	}
 	
 }
@@ -5649,7 +5659,7 @@
 
 .icon-windows8() {
 	&:before {
-		content:"\f332";
+		content:"\f333";
 	}
 	
 }
@@ -5659,7 +5669,7 @@
 
 .icon-wink() {
 	&:before {
-		content:"\f333";
+		content:"\f334";
 	}
 	
 }
@@ -5669,7 +5679,7 @@
 
 .icon-wink2() {
 	&:before {
-		content:"\f334";
+		content:"\f335";
 	}
 	
 }
@@ -5679,7 +5689,7 @@
 
 .icon-wondering() {
 	&:before {
-		content:"\f335";
+		content:"\f336";
 	}
 	
 }
@@ -5689,7 +5699,7 @@
 
 .icon-wondering2() {
 	&:before {
-		content:"\f336";
+		content:"\f337";
 	}
 	
 }
@@ -5699,7 +5709,7 @@
 
 .icon-wordpress() {
 	&:before {
-		content:"\f337";
+		content:"\f338";
 	}
 	
 }
@@ -5709,7 +5719,7 @@
 
 .icon-wordpress2() {
 	&:before {
-		content:"\f338";
+		content:"\f339";
 	}
 	
 }
@@ -5719,7 +5729,7 @@
 
 .icon-wrench() {
 	&:before {
-		content:"\f339";
+		content:"\f33a";
 	}
 	
 }
@@ -5729,7 +5739,7 @@
 
 .icon-x-altx-alt() {
 	&:before {
-		content:"\f33a";
+		content:"\f33b";
 	}
 	
 }
@@ -5739,7 +5749,7 @@
 
 .icon-x() {
 	&:before {
-		content:"\f33b";
+		content:"\f33c";
 	}
 	
 }
@@ -5749,7 +5759,7 @@
 
 .icon-xing() {
 	&:before {
-		content:"\f33c";
+		content:"\f33d";
 	}
 	
 }
@@ -5759,7 +5769,7 @@
 
 .icon-xing2() {
 	&:before {
-		content:"\f33d";
+		content:"\f33e";
 	}
 	
 }
@@ -5769,7 +5779,7 @@
 
 .icon-yahoo() {
 	&:before {
-		content:"\f33e";
+		content:"\f33f";
 	}
 	
 }
@@ -5779,7 +5789,7 @@
 
 .icon-yelp() {
 	&:before {
-		content:"\f33f";
+		content:"\f340";
 	}
 	
 }
@@ -5789,7 +5799,7 @@
 
 .icon-youtube() {
 	&:before {
-		content:"\f340";
+		content:"\f341";
 	}
 	
 }
@@ -5799,7 +5809,7 @@
 
 .icon-youtube2() {
 	&:before {
-		content:"\f341";
+		content:"\f342";
 	}
 	
 }
@@ -5809,7 +5819,7 @@
 
 .icon-zoomin() {
 	&:before {
-		content:"\f342";
+		content:"\f343";
 	}
 	
 }
@@ -5819,7 +5829,7 @@
 
 .icon-zoomout() {
 	&:before {
-		content:"\f343";
+		content:"\f344";
 	}
 	
 }
