--- a/client/app/controllers/forms/forms.less
+++ b/client/app/controllers/forms/forms.less
@@ -9,6 +9,14 @@
   padding: 0 0 8px;
 }
 
+.main-page-title {
+  font-weight: 300;
+  font-size: 27px;
+  padding: 0 0 8px 10px;
+  border-bottom: solid 1px #ddd;
+  color: @darkgray-dark;
+}
+
 .oh {
   overflow: hidden;
 }
