Adding the certificates empty state

--- a/client/app/controllers/forms/forms.less
+++ b/client/app/controllers/forms/forms.less
@@ -13,8 +13,8 @@
   font-weight: 300;
   font-size: 27px;
   padding: 0 0 8px 10px;
-  border-bottom: solid 1px #ddd;
   color: @darkgray-dark;
+  margin: 0;
 }
 
 .oh {
