--- a/client/app/controllers/forms/forms.less
+++ b/client/app/controllers/forms/forms.less
@@ -15,7 +15,12 @@
   padding: 0 0 8px 10px;
   color: @darkgray-dark;
   margin: 0;
+  &.sub {
+    font-size: 22px;
+  }
 }
+
+
 
 .oh {
   overflow: hidden;
