--- a/client/app/controllers/forms/forms.less
+++ b/client/app/controllers/forms/forms.less
@@ -1,12 +1,20 @@
+.green-brand {
+  display: block;
+  max-height: 50px;
+  padding: 5px 20px;
+  img {
+    height: 40px;
+  }
+}
+
 .page-title {
   margin: 0;
-  font-size: 16px;
+  font-size: 25px;
   margin-bottom: 10px;
-  text-transform: uppercase;
-  font-weight: 800;
+  font-weight: 300;
   color: @darkgray-dark;
-  border-bottom: solid 1px #eee;
-  padding: 0 0 8px;
+  border-bottom: solid 1px #ddd;
+  padding: 0 0 8px 10px;
 }
 
 .main-page-title {
@@ -19,13 +27,9 @@
     font-size: 22px;
   }
 }
-
-
-
 .oh {
   overflow: hidden;
 }
-
 .forms-empty {
   position: relative;
   .empty-image {
@@ -50,7 +54,6 @@
     left: 110px;
   }
 }
-
 .avil-certificate {
   padding: 10px 30px;
   border-bottom: solid 1px #ddd;
@@ -58,7 +61,6 @@
   border-radius: 5px;
   margin-bottom: 20px;
 }
-
 .item {
   position: relative;
   min-height: 100px;
@@ -82,7 +84,6 @@
     }
   }
 }
-
 .iconed-input {
   position: relative;
   em {
@@ -93,7 +94,6 @@
     color: #aaa;
   }
 }
-
 .main-content-wrap {
   padding: 0;
   background: #fff;
@@ -101,14 +101,12 @@
   transition-timing-function: cubic-bezier(0.1, 0.82, 0.25, 1);
   border-top: 3px solid #ffac00;
 }
-
 .main-content {
   min-height: 800px;
   background: #fefefe;
   padding: 30px 20px;
   border-right: solid 1px #dcdcdc;
 }
-
 .table-click tr {
   cursor: pointer;
 }
@@ -133,32 +131,29 @@
   font-weight: 300;
   display: block;
 }
-
 .froms-list {
   margin-top: 30px;
 }
-
 .tabled-row-filter {
-padding: 20px;
-border-top: solid 1px #f4f4f4;
-.label {
-  padding: 4px 15px;
-  margin-right: 15px;
-  background: #fff;
-  color: #797979;
-  border: solid 1px #dcdcdc;
-  font-size: 13px;
-  border-radius: 15px;
-  font-weight: normal;
-  cursor: pointer;
-  &.selected {
-    color: #fff;
-    background: #3bafda;
-    border-color: #3bafda;
+  padding: 20px;
+  border-top: solid 1px #f4f4f4;
+  .label {
+    padding: 4px 15px;
+    margin-right: 15px;
+    background: #fff;
+    color: #797979;
+    border: solid 1px #dcdcdc;
+    font-size: 13px;
+    border-radius: 15px;
+    font-weight: normal;
+    cursor: pointer;
+    &.selected {
+      color: #fff;
+      background: #3bafda;
+      border-color: #3bafda;
+    }
   }
 }
-}
-
 .tabled-row-heading {
   padding: 10px 20px;
   overflow: hidden;
@@ -168,7 +163,6 @@ border-top: solid 1px #f4f4f4;
   margin: 0 -20px;
   border-top: solid 1px #f3f3f3;
 }
-
 .tabled-row {
   margin: 0;
   padding: 15px 20px;
@@ -181,9 +175,21 @@ border-top: solid 1px #f4f4f4;
   }
 }
 
-.animate-if.ng-enter, .animate-if.ng-leave {
+.table-wide.table > tbody > tr {
+  &:hover {
+    cursor: pointer;
+    background: #fff6e3;
+  }
+}
+
+.table-wide.table > tbody > tr > td {
+  padding: 13px 20px;
+}
+
+.animate-if.ng-enter,
+.animate-if.ng-leave {
   -webkit-transition: width 0.3s;
-  transition: width  0.3s;
+  transition: width 0.3s;
   transition-timing-function: cubic-bezier(0.1, 0.82, 0.25, 1);
 }
 
