Showing only the published form in the user profile

--- a/client/app/controllers/forms/forms.less
+++ b/client/app/controllers/forms/forms.less
@@ -182,7 +182,15 @@
   }
 }
 
-.table-wide.table > tbody > tr > td {
+.table-wide.table {
+  margin-top: 30px;
+}
+
+.table-wide.table > tbody > tr > th {
+  padding: 13px 20px;
+}
+
+.table-wide.table > thead > tr > td {
   padding: 13px 20px;
 }
 
