User theme change

--- a/client/app/controllers/forms/forms.less
+++ b/client/app/controllers/forms/forms.less
@@ -122,6 +122,12 @@
   position: fixed;
   width: inherit;
 }
+
+.main-content-right-side {
+  padding: 20px 20px;
+  padding-top: 40px;
+}
+
 .p0 {
   margin: 0;
   padding: 0;
