--- a/client/components/sidebar/sidebar.html
+++ b/client/components/sidebar/sidebar.html
@@ -5,7 +5,7 @@
       </div>
     <br>
     <ul class="sb-nav">
-        <li ng-show="isAdmin()" ng-class="{active: isActive('/forms')}"><a href="/forms"><em class="icon icon-dashboard"></em> Dashboard</a></li>
+        <li ng-class="{active: isActive('/forms')}"><a href="/forms"><em class="icon icon-dashboard"></em> Dashboard</a></li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/certificates')}"><a href="/certificates"> <em class="icon  icon-trophy"></em>  Certificates</a></li>
         <li> <a href=""><em class="icon icon-chart"></em> Reports</a></li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin"><em class="icon icon-users2"></em>  Admin</a></li>
