Adding multiple select

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -22,6 +22,7 @@
 @import 'common/header.less';
 @import 'common/icons.less';
 @import 'common/ladda.less';
+@import 'common/select.less';
 @import 'common/sweetalert.less';
 @import 'common/utils.less';
 @import 'controllers/admin/admin.less';
