Adding the remove nice cool background

--- a/client/app/common/header.less
+++ b/client/app/common/header.less
@@ -14,6 +14,16 @@
   }
 }
 
+.login-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url('../assets/images/login-1.jpeg') center center no-repeat;
+  background-size: cover;
+}
+
 .login-container {
   max-width: 400px;
   background: #fff;
