Minor fixes in the form show

--- a/client/app/controllers/formshow/formshow.less
+++ b/client/app/controllers/formshow/formshow.less
@@ -16,6 +16,8 @@
 
 .form-show {
 
+  margin-bottom: 200px;
+
   .form-show-container {
     position: relative;
   }
@@ -55,6 +57,12 @@
 
   select {
     max-width: 300px;
+  }
+
+  .prev-field-label  {
+    font-size: 20px;
+    font-weight: 300;
+    color: #666;
   }
 
 }
