Adding the graph

--- a/client/app/controllers/formshow/formshow.less
+++ b/client/app/controllers/formshow/formshow.less
@@ -375,3 +375,14 @@
     left: 72px;
   }
 }
+
+.certf {
+  padding: 20px;
+}
+
+.certf-text {
+  color: #dcb457;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 5px 0;
+}
