Adding the graph in the responses page

--- a/client/app/controllers/formshow/formshow.less
+++ b/client/app/controllers/formshow/formshow.less
@@ -328,7 +328,27 @@
   font-weight: 300;
   color: #888;
   font-size: 20px;
-  margin-left: 40px;
+  margin: 0 0 0 40px;
+}
+
+.scoreboard-square {
+  border: solid 1px #4A89DC;
+  background: #f8f8f8;
+  margin: 0 20px;
+  width: 130px;
+  height: 70px;
+  line-height: 70px;
+  text-align: center;
+  border-radius: 3px;
+  .aquired_point {
+    font-size: 37px;
+    font-weight: 300;
+  }
+  .possible_point {
+    font-size: 18px;
+    font-weight: 300;
+    color: #888;
+  }
 }
 
 .scoreboard {
