Adding the helptext for choices

--- a/client/app/common/utils.less
+++ b/client/app/common/utils.less
@@ -28,3 +28,19 @@ select.form-control {
 .vScroll {
   overflow-x: auto;
 }
+
+textarea {
+  resize: both;
+}
+
+textarea.vert {
+  resize: vertical;
+}
+
+textarea.horz {
+  resize: horizontal;
+}
+
+textarea.noResize {
+  resize: none;
+}
