--- a/client/app/app.less
+++ b/client/app/app.less
@@ -1,3 +1,4 @@
+@import "variables.less";
 @import 'bootstrap/less/bootstrap.less';
 @import 'font-awesome/less/font-awesome.less';
 
@@ -38,6 +39,7 @@
 @import 'directives/na/na.less';
 @import 'directives/prevElement/prevElement.less';
 @import 'directives/typeBadge/typeBadge.less';
+@import 'variables.less';
 @import 'footer/footer.less';
 @import 'modal/modal.less';
 // endinjector
