Adding the close button to the popups

--- a/client/app/controllers/formshow/formshow.less
+++ b/client/app/controllers/formshow/formshow.less
@@ -428,3 +428,11 @@
   text-transform: uppercase;
   margin: 5px 0;
 }
+
+
+.popover-close {
+  position: absolute;
+  right: 5px;
+  top: -3px;
+  cursor: pointer;
+}
