Adding the certificate description

--- a/client/app/common/utils.less
+++ b/client/app/common/utils.less
@@ -92,4 +92,25 @@ input[type=checkbox] {
   background-size: cover
 }
 
+.modal.modal-full {
+  .modal-dialog {
+    width: 700px;
+  }
+}
+
+.modal-backdrop {
+  bottom: 0;
+}
+
+.modal-header {
+  padding: 0;
+  background: #43434b;
+  h3 {
+    margin: 0;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: #fff;
+    padding: 10px 10px;
+  }
+}
 
