Fixing the issue #5 Save as draft not working

--- a/client/app/controllers/formshow/formshow.less
+++ b/client/app/controllers/formshow/formshow.less
@@ -436,3 +436,12 @@
   top: -3px;
   cursor: pointer;
 }
+
+.formsubmit-actions {
+  .draft {
+    margin-left: 50px;
+  }
+  .next {
+    margin-left: 20px;
+  }
+}
