--- a/client/app/app.less
+++ b/client/app/app.less
@@ -24,6 +24,7 @@
 @import 'common/icons.less';
 @import 'common/ladda.less';
 @import 'common/nvd3.less';
+@import 'common/quill.less';
 @import 'common/select.less';
 @import 'common/sweetalert.less';
 @import 'common/utils.less';
