--- a/client/app/common/select.less
+++ b/client/app/common/select.less
@@ -27,14 +27,14 @@ Version: 3.4.8 Timestamp: Thu May  1 09:50:32 EDT 2014
 
 .select2-container .select2-choice {
     display: block;
-    height: 30px;
+    height: 33px;
     padding: 0 0 0 8px;
     overflow: hidden;
     position: relative;
 
-    border: 1px solid #aaa;
+    border: 1px solid #ccc;
     white-space: nowrap;
-    line-height: 26px;
+    line-height: 30px;
     color: #444;
     text-decoration: none;
 
@@ -48,16 +48,16 @@ Version: 3.4.8 Timestamp: Thu May  1 09:50:32 EDT 2014
           -ms-user-select: none;
               user-select: none;
 
-    background-color: #fff;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eee), color-stop(0.5, #fff));
-    background-image: -webkit-linear-gradient(center bottom, #eee 0%, #fff 50%);
-    background-image: -moz-linear-gradient(center bottom, #eee 0%, #fff 50%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#eeeeee', GradientType = 0);
-    background-image: linear-gradient(to top, #eee 0%, #fff 50%);
+    background-color: #FAFAFA;
+    // background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eee), color-stop(0.5, #fff));
+    // background-image: -webkit-linear-gradient(center bottom, #eee 0%, #fff 50%);
+    // background-image: -moz-linear-gradient(center bottom, #eee 0%, #fff 50%);
+    // filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#eeeeee', GradientType = 0);
+    // background-image: linear-gradient(to top, #eee 0%, #fff 50%);
 }
 
 .select2-container.select2-drop-above .select2-choice {
-    border-bottom-color: #aaa;
+    border-bottom-color: #ccc;
 
     border-radius: 0 0 2px 2px;
 
@@ -137,7 +137,7 @@ Version: 3.4.8 Timestamp: Thu May  1 09:50:32 EDT 2014
 
     background: #fff;
     color: #43434a;
-    border: 1px solid #aaa;
+    border: 1px solid #ccc;
     border-top: 0;
 
     border-radius: 0 0 2px 2px;
@@ -148,7 +148,7 @@ Version: 3.4.8 Timestamp: Thu May  1 09:50:32 EDT 2014
 
 .select2-drop.select2-drop-above {
     margin-top: 1px;
-    border-top: 1px solid #aaa;
+    border-top: 1px solid #ccc;
     border-bottom: 0;
 
     border-radius: 2px 2px 0 0;
@@ -167,7 +167,7 @@ Version: 3.4.8 Timestamp: Thu May  1 09:50:32 EDT 2014
 }
 
 .select2-drop-auto-width {
-    border-top: 1px solid #aaa;
+    border-top: 1px solid #ccc;
     width: auto;
 }
 
@@ -183,24 +183,24 @@ Version: 3.4.8 Timestamp: Thu May  1 09:50:32 EDT 2014
     right: 0;
     top: 0;
 
-    border-left: 1px solid #aaa;
+    border-left: 1px solid #ccc;
     border-radius: 0 2px 2px 0;
 
     background-clip: padding-box;
 
-    background: #ccc;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #ccc), color-stop(0.6, #eee));
-    background-image: -webkit-linear-gradient(center bottom, #ccc 0%, #eee 60%);
-    background-image: -moz-linear-gradient(center bottom, #ccc 0%, #eee 60%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#eeeeee', endColorstr = '#cccccc', GradientType = 0);
-    background-image: linear-gradient(to top, #ccc 0%, #eee 60%);
+    background: #f8f8f8;
+    // background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #ccc), color-stop(0.6, #eee));
+    // background-image: -webkit-linear-gradient(center bottom, #ccc 0%, #eee 60%);
+    // background-image: -moz-linear-gradient(center bottom, #ccc 0%, #eee 60%);
+    // filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#eeeeee', endColorstr = '#cccccc', GradientType = 0);
+    // background-image: linear-gradient(to top, #ccc 0%, #eee 60%);
 }
 
 .select2-container .select2-choice .select2-arrow b {
     display: block;
     width: 100%;
     height: 100%;
-    background: url('../assets/images/select2.png') no-repeat 0 1px;
+    background: url('../assets/images/select2.png') no-repeat 0 3px;
 }
 
 .select2-search {
@@ -227,7 +227,7 @@ Version: 3.4.8 Timestamp: Thu May  1 09:50:32 EDT 2014
     outline: 0;
     font-size: 1em;
 
-    border: 1px solid #aaa;
+    border: 1px solid #ccc;
     border-radius: 0;
 
     -webkit-box-shadow: none;
@@ -449,7 +449,7 @@ disabled look for disabled choices in the results dropdown
     padding: 0;
     position: relative;
 
-    border: 1px solid #aaa;
+    border: 1px solid #ccc;
     cursor: text;
     overflow: hidden;
 
@@ -518,7 +518,7 @@ html[dir="rtl"] .select2-container-multi .select2-choices li
     line-height: 13px;
     color: #333;
     cursor: default;
-    border: 1px solid #aaaaaa;
+    border: 1px solid #ccc;
 
     border-radius: 3px;
 
