Adding the WIP icon

--- a/client/app/common/icons.less
+++ b/client/app/common/icons.less
@@ -5729,9 +5729,19 @@
  	.icon-wink2();
 }
 
-.icon-wondering() {
+.icon-wip() {
 	&:before {
 		content:"\f33b";
+	}
+	
+}
+.icon-wip{
+ 	.icon-wip();
+}
+
+.icon-wondering() {
+	&:before {
+		content:"\f33c";
 	}
 	
 }
@@ -5741,7 +5751,7 @@
 
 .icon-wondering2() {
 	&:before {
-		content:"\f33c";
+		content:"\f33d";
 	}
 	
 }
@@ -5751,7 +5761,7 @@
 
 .icon-wordpress() {
 	&:before {
-		content:"\f33d";
+		content:"\f33e";
 	}
 	
 }
@@ -5761,7 +5771,7 @@
 
 .icon-wordpress2() {
 	&:before {
-		content:"\f33e";
+		content:"\f33f";
 	}
 	
 }
@@ -5771,7 +5781,7 @@
 
 .icon-wrench() {
 	&:before {
-		content:"\f33f";
+		content:"\f340";
 	}
 	
 }
@@ -5781,7 +5791,7 @@
 
 .icon-x-altx-alt() {
 	&:before {
-		content:"\f340";
+		content:"\f341";
 	}
 	
 }
@@ -5791,7 +5801,7 @@
 
 .icon-x() {
 	&:before {
-		content:"\f341";
+		content:"\f342";
 	}
 	
 }
@@ -5801,7 +5811,7 @@
 
 .icon-xing() {
 	&:before {
-		content:"\f342";
+		content:"\f343";
 	}
 	
 }
@@ -5811,7 +5821,7 @@
 
 .icon-xing2() {
 	&:before {
-		content:"\f343";
+		content:"\f344";
 	}
 	
 }
@@ -5821,7 +5831,7 @@
 
 .icon-yahoo() {
 	&:before {
-		content:"\f344";
+		content:"\f345";
 	}
 	
 }
@@ -5831,7 +5841,7 @@
 
 .icon-yelp() {
 	&:before {
-		content:"\f345";
+		content:"\f346";
 	}
 	
 }
@@ -5841,7 +5851,7 @@
 
 .icon-youtube() {
 	&:before {
-		content:"\f346";
+		content:"\f347";
 	}
 	
 }
@@ -5851,7 +5861,7 @@
 
 .icon-youtube2() {
 	&:before {
-		content:"\f347";
+		content:"\f348";
 	}
 	
 }
@@ -5861,7 +5871,7 @@
 
 .icon-zoomin() {
 	&:before {
-		content:"\f348";
+		content:"\f349";
 	}
 	
 }
@@ -5871,7 +5881,7 @@
 
 .icon-zoomout() {
 	&:before {
-		content:"\f349";
+		content:"\f34a";
 	}
 	
 }
