--- a/client/app/controllers/formshow/formshow.less
+++ b/client/app/controllers/formshow/formshow.less
@@ -429,12 +429,17 @@
   margin: 5px 0;
 }
 
-
 .popover-close {
   position: absolute;
   right: 5px;
   top: -3px;
   cursor: pointer;
+}
+
+.popover-content {
+  a {
+    color: #6E00BA;
+  }
 }
 
 .formsubmit-actions {
