--- a/client/app/controllers/results/results.less
+++ b/client/app/controllers/results/results.less
@@ -6,6 +6,13 @@
 
 }
 
+.table-row-status {
+  em {
+    vertical-align: -1px;
+    font-size: 16px;
+  }
+}
+
 .stuck {
   position: fixed;
   top: 0;
