Adding the submission stats, fixes the issue #13

--- a/client/app/controllers/results/results.less
+++ b/client/app/controllers/results/results.less
@@ -6,6 +6,28 @@
 
 }
 
+.form-results-meta-stats {
+  li {
+    .form-stat {
+      background: #F5F7FA;
+      font-size: 13px;
+      line-height: 1.5;
+      margin-right: 15px;
+      padding: 5px 10px;
+      vertical-align: middle;
+      border: solid 1px #ddd;
+      color: #888;
+      display: block;
+      text-align: center;
+      strong {
+        color: #43435A;
+        font-size: 18px;
+        display: block;
+      }
+    }
+  }
+}
+
 .table-row-status {
   em {
     vertical-align: -1px;
