--- a/client/app/controllers/formshow/formshow.less
+++ b/client/app/controllers/formshow/formshow.less
@@ -277,6 +277,15 @@
   font-size: 30px;
   border-bottom: solid 1px #43434A;
   margin: 10px 0;
+  input[type='text'] {
+    bottom: 0;
+    text-align: center;
+    &:focus {
+      border: 0;
+      box-shadow: none;
+      outline: 0;
+    }
+  }
 }
 
 .certificate-footer {
