--- a/client/app/controllers/forms/forms.less
+++ b/client/app/controllers/forms/forms.less
@@ -184,6 +184,7 @@
   margin: 0 -20px;
   border-top: solid 1px #f3f3f3;
 }
+
 .tabled-row {
   margin: 0;
   padding: 15px 20px;
@@ -193,6 +194,13 @@
   &:hover {
     background: #fff6e3;
     cursor: pointer;
+  }
+}
+
+.expired {
+  opacity: 0.5;
+  &:hover {
+    opacity: 0.8;
   }
 }
 
