Fixing the sequence of the options

--- a/client/app/controllers/create/create.less
+++ b/client/app/controllers/create/create.less
@@ -409,3 +409,22 @@ a.showtip {
 .addNewChoice {
   margin: 10px 0 15px 10px;
 }
+
+.ui-state-highlight {
+  height: 130px;
+  margin: 20px 0;
+  background-color: #fbf9ee;
+  border: 1px dashed #ECD967;
+}
+
+.ui-sortable-helper {
+  box-shadow: 0 0 20px #ddd;
+  overflow: hidden;
+  z-index: 99999;
+  background-color: #efefefe;
+  margin: 0 0 0 30px;
+  .formSectionPrev {
+    border-left: 0;
+    overflow: hidden;
+  }
+}
