Fixing the certificate show Certificate preview #30

--- a/client/app/controllers/certificate/certificate.less
+++ b/client/app/controllers/certificate/certificate.less
@@ -36,7 +36,7 @@
       width: 190px;
     }
     .certificate-name input[type='text'] {
-
+      border: 0;
     }
   }
 }
@@ -73,7 +73,6 @@
 }
 
 .certificate-name {
-  display: block;
   color: #43434a;
   font-size: 30px;
   border-bottom: solid 1px #43434A;
@@ -81,6 +80,7 @@
   input[type='text'] {
     bottom: 0;
     text-align: center;
+    border: 0;
     &:focus {
       border: 0;
       box-shadow: none;
