Adding the export

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -32,6 +32,7 @@
 @import 'controllers/certificate/certificate.less';
 @import 'controllers/create/create.less';
 @import 'controllers/create/sidebar.less';
+@import 'controllers/exports/exports.less';
 @import 'controllers/forms/forms.less';
 @import 'controllers/formshow/formshow.less';
 @import 'controllers/results/results.less';
