Fixing the color of the button

--- a/client/app/controllers/results/results.less
+++ b/client/app/controllers/results/results.less
@@ -19,6 +19,7 @@
       color: #888;
       display: block;
       text-align: center;
+      border-radius: 3px;
       strong {
         color: #43435A;
         font-size: 18px;
