--- a/client/app/controllers/formshow/formshow.less
+++ b/client/app/controllers/formshow/formshow.less
@@ -250,7 +250,7 @@
 }
 
 .scoreboard-square {
-  border: solid 1px #4A89DC;
+  border: solid 1px #dcdcdc;
   background: #f8f8f8;
   margin: 0 20px;
   width: 130px;
