--- a/client/app/variables.less
+++ b/client/app/variables.less
@@ -209,7 +209,7 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              #333;
-@btn-default-bg:                 #fff;
+@btn-default-bg:                 #f8f8f8;
 @btn-default-border:             #ccc;
 
 @btn-primary-color:              #fff;
